# konpasu-bot

./: README.md  pyproject.toml
.devcontainer/: DockerFile  create.sh  devcontainer.json
discord_bot/: env.py  main.py
